--- a/index.html
+++ b/index.html
@@ -18,3 +18,14 @@
     <script src="script.js"></script>
 </body>
 </html>
+]
+},
+};
+
+let atual -0;
+let perguntaAtual;
+ 
+function mostraPergunta () {
+    perguntaAtual - perguntas[atual];
+    caixaPerguntas.textContent - perguntaAtual.enunciado;
+    mostraAlternativas();
